--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ img.right{float:right; margin:0 0 5px 10px;}
 	background-color:#FFFFFF;
 	padding:0px;
 	margin:10px auto;
-	width:750px;
+	width:500px auto;
 	height:auto;
 	text-align:left;
 	color:#234;
@@ -59,7 +59,8 @@ img.right{float:right; margin:0 0 5px 10px;}
 	color:#666;
 	font-family:"Courier New", Courier, monospace;
 	font-weight:bolder;
-	padding:5px 0px 0px 450px;
+	text-align:center;
+	padding:8px 8px 0px 8px;
 	letter-spacing:1px;
 	font-size:330%;
 	background-color:inherit;
@@ -68,22 +69,22 @@ img.right{float:right; margin:0 0 5px 10px;}
 	color:#666;
 	font-family:"Courier New", Courier, monospace;
 	font-weight:bold;
-	padding:0px 0px 0px 40px;
+	text-align:center;
+	padding:0% 0% 0% 0%;
 	letter-spacing:1px;
 	font-size:167%;
 	background-color:inherit;
 }
 
 
-
 #header #nav{
-	text-align:right;
+	text-align:center;
 	padding-right:10px;
 }
 #header #nav a{
 	color:#123;
-	padding-left:4px;
-	padding-right:4px;
+	padding-left:16px;
+	padding-right:16px;
 	width:auto;
 	font-family:Tahoma;
 	font-weight:bold;
@@ -100,8 +101,8 @@ img.right{float:right; margin:0 0 5px 10px;}
 	text-align:center;
 	width:auto;
 	height:auto;
-	padding:3px;
-	margin:10px;
+	padding:50px;
+	margin:3px;
 	color:#666;
 }
 
@@ -124,9 +125,9 @@ img.right{float:right; margin:0 0 5px 10px;}
 #content{
 	float:left;
 	width:90%;
-	height:650px;
-	padding:4px 4px 4px 4px;
-	margin-top:10px;
+	height:auto;
+	padding:8px 4px 4px 4px;
+	margin-top:0px;
 	margin-bottom:10px;
 	margin-left:30px;
 	margin-right:20px;
@@ -142,7 +143,7 @@ img.right{float:right; margin:0 0 5px 10px;}
 	background-color:inherit;
 	font-weight:bold;
 	font-size:200%;
-	padding:0px 2px 3px 2px;
+	padding:4px 16px 4px 16px;
 	line-height:3px;
 }
 #content h4{
@@ -161,7 +162,7 @@ img.right{float:right; margin:0 0 5px 10px;}
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:145% !important;
 	text-indent:0px;
-	padding-left:10px;
+	padding:4px 32px 4px 32px;
 	line-height:18px;
 }
 
