Make footer spacious.

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ img.right{float:right; margin:0 0 5px 10px;}
 	width:auto;
 	height:auto;
 	padding:50px;
+	padding-top:200px;
 	margin:3px;
 	color:#666;
 }
