--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ img.right{float:right; margin:0 0 5px 10px;}
     padding:0px;
     margin:10px auto;
     width:500px auto;
-    height:auto;
+    min-height:100%;
     text-align:left;
     color:#234;
 }
@@ -102,7 +102,7 @@ img.right{float:right; margin:0 0 5px 10px;}
     width:auto;
     height:auto;
     padding:50px;
-    padding-top:200px;
+    padding-top:50px;
     margin:3px;
     color:#666;
 }
