--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html, body{
     text-align:center;
     font-family:Verdana, Arial, Helvetica, sans-serif;
     font-size:80%;
+    height:100%;
     color:#234;
 }
 
@@ -101,8 +102,8 @@ img.right{float:right; margin:0 0 5px 10px;}
     text-align:center;
     width:auto;
     height:auto;
-    padding:50px;
-    padding-top:50px;
+    padding:10px;
+    padding-top:30px;
     margin:3px;
     color:#666;
 }
