--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html, body{
     text-align:center;
     font-family:Verdana, Arial, Helvetica, sans-serif;
     font-size:80%;
+    height:100%;
     color:#234;
 }
 
