--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ img.right{float:right; margin:0 0 5px 10px;}
     padding:0px;
     margin:10px auto;
     width:500px auto;
+    height:auto;
     min-height:100%;
     text-align:left;
     color:#234;
