--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@ p{
     font-size:80%;
     background-color:inherit;
 }
+b{
+    color:#666;
+    text-decoration:none;
+    font:Verdana, Arial, Helvetica, sans-serif;
+    font-weight:bold;
+    background-color:inherit;
+}
 
 a img{border:none;}
 
